--- a/src/app/dominatingSolver/page/graph-presenter/graph-presenter.component.html
+++ b/src/app/dominatingSolver/page/graph-presenter/graph-presenter.component.html
@@ -1,31 +1,18 @@
-<!--
-<button (click)="addNewNode()">+</button>
-<div *ngFor="let node of nodeList; let i=index;" class="relative">
-  <div class="node relative" (cdkDragMoved)="dragMoved($event, i)"
-       cdkDrag [cdkDragFreeDragPosition]="dragNodePositionList[i]">
-    {{node.index}}
+<button class="btn btn-info d-flex justify-content-center text-white mt-3" style="margin: auto;" (click)="addNode()">Add Node</button>
 
-    <img class="anim-gear setting" (click)="openSelect(i)"
-         src="../../../../assets/image/settings.svg">
-    <mat-select [id]="'select' + i" class="select-container">
-      <mat-option>Delete Node</mat-option>
-      <mat-option>Delete Node</mat-option>
-      <mat-option>Delete Node</mat-option>
-      <mat-option>Delete Node</mat-option>
-      <mat-option>Delete Node</mat-option>
-    </mat-select>
+<div class="p-4">
+  <div class="mx-auto border-rounded bg-dark text-white p-2">
+
+  <div *ngFor="let row of matrix; let y=index;" style="margin-top: 10px;">
+    <span (click)="toggleItem(y,x)" style="margin-right: 10px; cursor: pointer;"
+    class="mx-auto px-3"
+    *ngFor="let item of row; let x=index;">
+      {{item}}
+    </span>
+  </div>
   </div>
 
-
-</div>
--->
-
-<button (click)="addNode()">Add Node</button>
-
-<div *ngFor="let row of matrix; let y=index;" style="margin-top: 10px;">
-  <span (click)="toggleItem(y,x)" style="margin-right: 10px; cursor: pointer;" *ngFor="let item of row; let x=index;">
-    {{item}}
-  </span>
 </div>
 
-<button (click)="sendMatrix()">Calculate</button>
+
+<button (click)="sendMatrix()" class="btn btn-dark d-flex justify-content-center text-white mx-auto" style="margin-top: 30px;">Calculate</button>
