--- a/src/app/dominatingSolver/page/dominating-solver-home/dominating-solver-home.component.html
+++ b/src/app/dominatingSolver/page/dominating-solver-home/dominating-solver-home.component.html
@@ -1,10 +1,23 @@
+ <div class="input-group mb-3 px-3 mt-3">
+  <div class="input-group-prepend">
+    <span class="input-group-text" id="inputGroup-sizing-default">Maximum lenght answer</span>
+  </div>
+  <input type="number" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" [formControl]="maxLengthAnswerControl">
+</div>
+
+
 <app-graph-presenter (createdMatrix)="runAlgorithm($event)"></app-graph-presenter>
 
-<div *ngFor="let chart of chartOptionList; let i=index;" class="mt-3">
-  <div echarts [options]="chart" class="demo-chart"></div>
 
-  <div *ngIf="tenTopAnswerList.length > 0">
-    <div *ngFor="let qubit of tenTopAnswerList[i]">
+<div *ngIf="showresualt" class="d-flex justify-content-center my-2">
+  <button class="btn-success btn-lg btn text-white">Quantun Algorithem Order: {{order}}</button>
+  <button class="btn-danger btn-lg btn text-white">Classic Algorithem Order: {{maxOrder}}</button>
+</div>
+
+<div *ngFor="let chart of chartOptionList; let i=index;">
+  <div *ngIf="i > 0" echarts [options]="chart" class="demo-chart"></div>
+  <div *ngIf="tenTopAnswerList.length > 0" style="padding: 6px; border-radius: 8px;" class="bg-info my-2">
+    <div *ngFor="let qubit of tenTopAnswerList[i]" style="text-align:center; ">
       {{qubit.value}}
       <span class="px-2">-</span>
       {{getProbabilityRangeQubit(qubit)}}
